fix: タイトル後ろの画像配置。z-index調整必要

--- a/src/tufspot/public/css/modules/index.css
+++ b/src/tufspot/public/css/modules/index.css
@@ -18,3 +18,27 @@
         transform: translateY(0);
     }
 }
+
+.image-on-title-container {
+    position: relative;
+    height: auto;
+    max-height: 182px;
+}
+
+.image-container {
+    height: 100%;
+    position: relative;
+}
+
+.pickup_title_image {
+    width: 40%;
+    height: auto;
+    max-height: 100%;
+    transform: translateY(-35%);
+}
+
+.image-on-title-container .top_pickup_title_wrapper.title-wrapper-on-image {
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
